--- a/config/eavlConfig.h.in
+++ b/config/eavlConfig.h.in
@@ -75,3 +75,6 @@
 
 /* Define to 1 if you have the MPI library */
 #undef HAVE_MPI
+
+/* Define to 1 if you are building with OpenMP support */
+#undef HAVE_OPENMP
