--- a/config-site/nostril.conf
+++ b/config-site/nostril.conf
@@ -1,7 +1,7 @@
-HDF5=/apps/visit/thirdparty/visit/hdf5/1.8.7/linux-x86_64_gcc-4.6
-NETCDF=/apps/visit/thirdparty/visit/netcdf/4.1.1/linux-x86_64_gcc-4.6
-VTK=/apps/visit/thirdparty/visit/vtk/5.8.0/linux-x86_64_gcc-4.6
-SILO=/apps/visit/thirdparty/visit/silo/4.8/linux-x86_64_gcc-4.6
-SZIP=/apps/visit/thirdparty/visit/szip/2.1/linux-x86_64_gcc-4.6
-ADIOS=/apps/adios
+HDF5=/apps/visit/thirdparty/visit/hdf5/1.8.7/linux-x86_64_gcc-4.4
+NETCDF=/apps/visit/thirdparty/visit/netcdf/4.1.1/linux-x86_64_gcc-4.4
+VTK=/apps/visit/thirdparty/visit/vtk/6.0.0/linux-x86_64_gcc-4.4
+SILO=/apps/visit/thirdparty/visit/silo/4.9.1/linux-x86_64_gcc-4.4
+SZIP=/apps/visit/thirdparty/visit/szip/2.1/linux-x86_64_gcc-4.4
+#ADIOS=/apps/adios
 BOOST=/apps/boost
