--- a/test/Makefile.in
+++ b/test/Makefile.in
@@ -11,7 +11,11 @@
 # *****************************************************************************
 @VARIABLES@
 
-TESTS = testimport testiso testnormal testrecenter testmath testdatamodel testxform testbin testgraphlayout
+ifneq (@VTK@, no)
+VTKTESTS=testvtk
+endif
+
+TESTS = testimport testiso testnormal testrecenter testmath testdatamodel testxform testbin testgraphlayout $(VTKTESTS)
 OBJ = $(TESTS:=.o)
 LIBDEP=$(TOPDIR)/lib/libeavl.a
 
@@ -55,10 +59,13 @@ testbin: $(LIBDEP) testbin.o
 testgraphlayout: $(LIBDEP) testgraphlayout.o
 	$(CXX) $(@:=.o) -o $@ $(CPPFLAGS) $(CXXFLAGS) $(LDFLAGS) $(LIBS)
 
+testvtk: $(LIBDEP) testvtk.o
+	$(CXX) $(@:=.o) -o $@ $(CPPFLAGS) $(CXXFLAGS) $(LDFLAGS) $(LIBS)
+
 LIBS=-lm -L$(TOPDIR)/lib -leavl
 #LIBS=-lm -lrt -L$(TOPDIR)/lib -leavl
 
-CPPFLAGS+= -I$(TOPDIR)/config -I$(TOPDIR)/src/math/ -I$(TOPDIR)/src/common/ -I$(TOPDIR)/src/functors/ -I$(TOPDIR)/src/filters/ -I$(TOPDIR)/src/importers -I$(TOPDIR)/src/exporters -I$(TOPDIR)/src/executor -I$(TOPDIR)/src/operations
+CPPFLAGS+= -I$(TOPDIR)/config -I$(TOPDIR)/src/math/ -I$(TOPDIR)/src/common/ -I$(TOPDIR)/src/functors/ -I$(TOPDIR)/src/filters/ -I$(TOPDIR)/src/importers -I$(TOPDIR)/src/exporters -I$(TOPDIR)/src/executor -I$(TOPDIR)/src/operations -I$(TOPDIR)/src/vtk
 CPPFLAGS+=$(VTK_CPPFLAGS) $(SILO_CPPFLAGS) $(ADIOS_CPPFLAGS) $(NETCDF_CPPFLAGS) $(CUDA_CPPFLAGS)
 LDFLAGS+=$(VTK_LDFLAGS) $(SILO_LDFLAGS) $(ADIOS_LDFLAGS) $(NETCDF_LDFLAGS) $(HDF5_LDFLAGS) $(CUDA_LDFLAGS)
 LIBS+=$(VTK_LIBS) $(SILO_LIBS) $(ADIOS_LIBS) $(NETCDF_LIBS) $(HDF5_LIBS) $(ZLIB_LIBS) $(CUDA_LIBS)
