adding new threshold filter. this version creates a standalone explicit cell set, instead of a subset cell set that references the original cell set. the old verion has been renamed to eavlSubsetMutator. either one leaves the points alone.

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -37,6 +37,7 @@ OBJ=\
  filters/eavlIsosurfaceFilter.o \
  filters/eavlPointDistanceFieldFilter.o \
  filters/eavlScalarBinFilter.o \
+ filters/eavlSubsetMutator.o \
  filters/eavlSurfaceNormalMutator.o \
  filters/eavlTesselate2DFilter.o \
  filters/eavlThresholdMutator.o \
