update config file.

--- a/config-site/nostril.conf
+++ b/config-site/nostril.conf
@@ -1,3 +1,5 @@
+## Dave Pugmire's linux machine
+
 HDF5=/apps/visit/thirdparty/visit/hdf5/1.8.7/linux-x86_64_gcc-4.4
 NETCDF=/apps/visit/thirdparty/visit/netcdf/4.1.1/linux-x86_64_gcc-4.4
 VTK=/apps/visit/thirdparty/visit/vtk/6.0.0/linux-x86_64_gcc-4.4
