--- a/config-site/nostril.conf
+++ b/config-site/nostril.conf
@@ -5,5 +5,5 @@ NETCDF=/apps/visit/thirdparty/visit/netcdf/4.1.1/linux-x86_64_gcc-4.4
 VTK=/apps/visit/thirdparty/visit/vtk/6.0.0/linux-x86_64_gcc-4.4
 SILO=/apps/visit/thirdparty/visit/silo/4.9.1/linux-x86_64_gcc-4.4
 SZIP=/apps/visit/thirdparty/visit/szip/2.1/linux-x86_64_gcc-4.4
-#ADIOS=/apps/adios
+ADIOS=/apps/adios/trunk
 BOOST=/apps/boost
