--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -78,6 +78,7 @@ endif
 
 ifneq (@ADIOS@, no)
  OBJ+=importers/eavlADIOSImporter.o
+ OBJ+=importers/eavlXGCImporter.o
 endif
 
 CPPFLAGS+=-I../config -Icommon/ -Ifonts/ -Iimporters/ -Imath/ -Irendering/ -Iexecutor/ -Ifunctors/ -Ioperations/ -Ifilters/ -Iexporters/ -Ivtk/
