Imported ray tracing code. Modified gather and scatter ops to optionally work on a smaller number of elements. Added two gather and scatters ops specifically for the ray tracer.

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -41,6 +41,7 @@ OBJ=\
  filters/eavlExternalFaceMutator.o \
  filters/eavlIsosurfaceFilter.o \
  filters/eavlPointDistanceFieldFilter.o \
+ filters/eavlRayTracerMutator.o \
  filters/eavlScalarBinFilter.o \
  filters/eavlSubsetMutator.o \
  filters/eavlSurfaceNormalMutator.o \
