Fixed intersection Depth.

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -49,6 +49,7 @@ OBJ=\
  filters/eavlThresholdMutator.o \
  filters/eavlTransformMutator.o \
  filters/eavlUnaryMathMutator.o \
+ filters/eavlRadixSortMutator.o \
  fonts/eavlBitmapFont.o \
  fonts/eavlBitmapFontFactory.o \
  fonts/Liberation2Mono.o \
