adding volume renderer boilerplate code.

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -42,6 +42,7 @@ OBJ=\
  filters/eavlIsosurfaceFilter.o \
  filters/eavlPointDistanceFieldFilter.o \
  filters/eavlRayTracerMutator.o \
+ filters/eavlVolumeRendererMutator.o \
  filters/eavlScalarBinFilter.o \
  filters/eavlSubsetMutator.o \
  filters/eavlSurfaceNormalMutator.o \
