Added new eavl mutator, eavlSelectionMutator, which allows a new cell set to be created out of the existing cell set based on an array of interesting unique field values (for more information see the .h file). Added capability to get more needed information for the xgp particle importer, updated CMakefile.in.

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -48,6 +48,7 @@ OBJ=\
  filters/eavlThresholdMutator.o \
  filters/eavlTransformMutator.o \
  filters/eavlUnaryMathMutator.o \
+ filters/eavlSelectionMutator.o \
  fonts/eavlBitmapFont.o \
  fonts/eavlBitmapFontFactory.o \
  fonts/Liberation2Mono.o \
