Add MESA to configure (both mangled, and pristine).  Add a testrender test case. PIL code to do image compares forthcoming.

--- a/config/eavlConfig.h.in
+++ b/config/eavlConfig.h.in
@@ -74,3 +74,7 @@
 
 /* Define to 1 if you are building with OpenMP support */
 #undef HAVE_OPENMP
+
+/* Define to 1 if you are building with MESA support */
+#undef HAVE_MESA
+
