--- a/config/make-dependencies.in
+++ b/config/make-dependencies.in
@@ -50,3 +50,8 @@ CUDA=@CUDA@
 CUDA_CPPFLAGS=@CUDA_CPPFLAGS@
 CUDA_LDFLAGS=@CUDA_LDFLAGS@
 CUDA_LIBS=@CUDA_LIBS@
+
+MESA=@MESA@
+MESA_CPPFLAGS=@MESA_CPPFLAGS@
+MESA_LDFLAGS=@MESA_LDFLAGS@
+MESA_LIBS=@MESA_LIBS@
