Adding simple ray query class at the request of Pugmire. All it does is ray intersections.

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -42,6 +42,7 @@ OBJ=\
  filters/eavlIsosurfaceFilter.o \
  filters/eavlPointDistanceFieldFilter.o \
  filters/eavlRayTracerMutator.o \
+ filters/eavlRayQueryMutator.o \
  filters/eavlVolumeRendererMutator.o \
  filters/eavlSimpleVRMutator.o \
  filters/eavlScalarBinFilter.o \
