--- a/test/Makefile.in
+++ b/test/Makefile.in
@@ -86,14 +86,12 @@ testvtk: $(LIBDEP) testvtk.o
 testserialize: $(LIBDEP) testserialize.o
 	$(CXX) $(@:=.o) -o $@ $(CPPFLAGS) $(CXXFLAGS) $(LDFLAGS) $(LIBS)
 
-<<<<<<< HEAD
 testray: $(LIBDEP) testray.o
 	$(CXX) $(@:=.o) -o $@ $(CPPFLAGS) $(CXXFLAGS) $(LDFLAGS) $(LIBS)
 
 testsort: $(LIBDEP) testsort.o
-=======
+	$(CXX) $(@:=.o) -o $@ $(CPPFLAGS) $(CXXFLAGS) $(LDFLAGS) $(LIBS)
 testxgc: $(LIBDEP) testxgc.o
->>>>>>> master
 	$(CXX) $(@:=.o) -o $@ $(CPPFLAGS) $(CXXFLAGS) $(LDFLAGS) $(LIBS)
 
 testrender: $(LIBDEP) testrender.o
@@ -102,7 +100,7 @@ testrender: $(LIBDEP) testrender.o
 LIBS=-lm -L$(TOPDIR)/lib -leavl
 #LIBS=-lm -lrt -L$(TOPDIR)/lib -leavl
 
-CPPFLAGS+= -I$(TOPDIR)/config -I$(TOPDIR)/src/math/ -I$(TOPDIR)/src/common/ -I$(TOPDIR)/src/functors/ -I$(TOPDIR)/src/filters/ -I$(TOPDIR)/src/importers -I$(TOPDIR)/src/exporters -I$(TOPDIR)/src/executor -I$(TOPDIR)/src/operations -I$(TOPDIR)/src/rendering -I$(TOPDIR)/src/fonts -I$(TOPDIR)/src/vtk
+CPPFLAGS+= -I$(TOPDIR)/config -I$(TOPDIR)/src/math/ -I$(TOPDIR)/src/common/ -I$(TOPDIR)/src/functors/ -I$(TOPDIR)/src/filters/ -I$(TOPDIR)/src/importers -I$(TOPDIR)/src/exporters -I$(TOPDIR)/src/executor -I$(TOPDIR)/src/operations -I$(TOPDIR)/src/rendering -I$(TOPDIR)/src/fonts -I$(TOPDIR)/src/vtk -I$(TOPDIR)/src/raytracing/
 CPPFLAGS+=$(VTK_CPPFLAGS) $(SILO_CPPFLAGS) $(ADIOS_CPPFLAGS) $(NETCDF_CPPFLAGS) $(CUDA_CPPFLAGS) $(MESA_CPPFLAGS) -g
 LDFLAGS+=$(VTK_LDFLAGS) $(SILO_LDFLAGS) $(ADIOS_LDFLAGS) $(NETCDF_LDFLAGS) $(HDF5_LDFLAGS) $(CUDA_LDFLAGS) $(MESA_LDFLAGS)
 LIBS+=$(VTK_LIBS) $(SILO_LIBS) $(ADIOS_LIBS) $(NETCDF_LIBS) $(HDF5_LIBS) $(ZLIB_LIBS) $(CUDA_LIBS) $(MESA_LIBS)
