--- a/config-site/nostril.conf
+++ b/config-site/nostril.conf
@@ -2,13 +2,14 @@
 #MPI=mpicxx
 #MPI_CPPFLAGS="-I/usr/lib/openmpi/include -I/usr/lib/openmpi/include/openmpi"
 #MPI_LDFLAGS="-L/usr/lib/openmpi/lib -lmpi_cxx -lmpi -lopen-rte -lopen-pal -ldl -Wl,--export-dynamic -lnsl -lutil -lm -ldl"
-HDF5=/apps/visit/thirdparty/visit/hdf5/1.8.7/linux-x86_64_gcc-4.4
-NETCDF=/apps/visit/thirdparty/visit/netcdf/4.1.1/linux-x86_64_gcc-4.4
-VTK=/apps/visit/thirdparty/visit/vtk/6.0.0/linux-x86_64_gcc-4.4
-SILO=/apps/visit/thirdparty/visit/silo/4.10/linux-x86_64_gcc-4.4
-SZIP=/apps/visit/thirdparty/visit/szip/2.1/linux-x86_64_gcc-4.4
+HDF5=/apps/visit/thirdparty/visit/hdf5/1.8.7/linux-x86_64_gcc-4.8
+NETCDF=/apps/visit/thirdparty/visit/netcdf/4.1.1/linux-x86_64_gcc-4.8
+VTK=/apps/visit/thirdparty/visit/vtk/6.1.0/linux-x86_64_gcc-4.8
+#VTK=/apps/visit/thirdparty-old/visit/vtk/6.0.0/linux-x86_64_gcc-4.4
+SILO=/apps/visit/thirdparty/visit/silo/4.10/linux-x86_64_gcc-4.8
+SZIP=/apps/visit/thirdparty/visit/szip/2.1/linux-x86_64_gcc-4.8
 ADIOS=/apps/adios/trunk
 BOOST=/apps/boost
 CUDA=no
 #MESA=/apps/mesa
-#MESA=/apps/mesa/mangled
+MESA=/apps/mesa/mangled
