--- a/test/Makefile.in
+++ b/test/Makefile.in
@@ -26,7 +26,7 @@ endif
 TESTS = testimport testiso testnormal testrecenter testthreshold testbox testmath testdatamodel testxform testbin testdistancefield testgraphlayout testatompipeline testserialize testray testsort $(ADIOSTESTS)  $(RENDERTESTS) $(VTKTESTS)
 
 OBJ = $(TESTS:=.o)
-LIBDEP=$(TOPDIR)/lib/libeavl.a
+LIBDEP=$(TOPDIR)/lib/$(LIB_NAME)
 
 all: $(TESTS)
 	@echo ""
