--- a/test/Makefile.in
+++ b/test/Makefile.in
@@ -23,7 +23,7 @@ ifneq (@ADIOS@, no)
 ADIOSTESTS=testxgc
 endif
 
-TESTS = testimport testiso testnormal testrecenter testthreshold testbox testmath testdatamodel testxform testbin testdistancefield testgraphlayout testatompipeline testserialize testray testsort $(ADIOSTESTS)  $(RENDERTESTS) $(VTKTESTS)
+TESTS = testimport testiso testnormal testrecenter testthreshold testbox testmath testdatamodel testxform testbin testdistancefield testgraphlayout testatompipeline testserialize testray testsort testvolume $(ADIOSTESTS)  $(RENDERTESTS) $(VTKTESTS)
 
 OBJ = $(TESTS:=.o)
 LIBDEP=$(TOPDIR)/lib/$(LIB_NAME)
@@ -96,6 +96,9 @@ testrender: $(LIBDEP) testrender.o
 	$(CXX) $(@:=.o) -o $@ $(CPPFLAGS) $(CXXFLAGS) $(LDFLAGS) $(LIBS)
 
 testsort: $(LIBDEP) testsort.o
+	$(CXX) $(@:=.o) -o $@ $(CPPFLAGS) $(CXXFLAGS) $(LDFLAGS) $(LIBS)
+
+testvolume: $(LIBDEP) testvolume.o
 	$(CXX) $(@:=.o) -o $@ $(CPPFLAGS) $(CXXFLAGS) $(LDFLAGS) $(LIBS)
 
 LIBS=-lm -L$(TOPDIR)/lib -leavl
